@@ -994,6 +994,7 @@ g_markup_parse_context_end_parse
 g_markup_parse_context_free
 g_markup_parse_context_get_position
 g_markup_parse_context_get_element
+g_markup_parse_context_get_element_stack
 g_markup_parse_context_new
 g_markup_parse_context_parse
 <SUBSECTION Private>
