@@ -1,5 +1,8 @@
 2007-11-07  Matthias Clasen <mclasen@redhat.com>
 
+	* glib/glib-sections.txt: Add g_markup_parse_context_get_element_stack
+2007-11-07  Matthias Clasen <mclasen@redhat.com>
+
 	* glib/building.sgml: Fix a typo
 
 2007-11-07  Matthias Clasen <mclasen@redhat.com>
